@@ -3,6 +3,7 @@
 # UserString instances should behave similar to builtin string objects.
 
 import string
+import unittest
 from test import support, string_tests
 
 from collections import UserString
@@ -10,6 +11,7 @@ from collections import UserString
 class UserStringTest(
     string_tests.CommonTest,
     string_tests.MixinStrUnicodeUserStringTest,
+    unittest.TestCase
     ):
 
     type2test = UserString
@@ -42,8 +44,5 @@ class UserStringTest(
         getattr(object, methodname)(*args)
 
 
-def test_main():
-    support.run_unittest(UserStringTest)
-
 if __name__ == "__main__":
-    test_main()
+    unittest.main()
